--- a/css/master.css
+++ b/css/master.css
@@ -30,8 +30,14 @@ body {
 img {
     border: 0;
 }
-.remove-margin-bottom {
+blockquote {
+  border-left: 5px solid #ff6d00;
+}
+.remove-margin {
   margin: 0 !important;
+}
+.remove-padding-left {
+  padding-left: 0 !important;
 }
 /*==============================
             Nav Bar
@@ -76,8 +82,14 @@ i.icon-gray {
     position: relative;
     padding: 0;
 }
-
-/*====== Section 1 =============*/
+.section-title {
+  margin: 10% 0 5% 0;
+}
+.section-title-underline {
+  height: 0.15em;
+  margin-top: 1.25%;
+}
+/*====== Header =============*/
 
 #section-header {
     margin: 0 auto;
@@ -134,18 +146,43 @@ i.icon-gray {
   line-height: 1.45;
 }
 /*====== Section 3 =============*/
-
 #section-3 h4 {
-  margin-top: 10%;
+  margin-bottom: 10%;
 }
-#section-3 h6 {
 
-  margin: 4% 0;
+#section-3 h6 {
+  font-size: 1.4rem;
+  margin: 5% 0 4% 0;
+}
+#section-3 p {
+  font-size: 1.2rem;
+  margin-bottom: 25%;
 }
 /*====== Section 4 =============*/
 
 #section-4 {
   background-color: #fafafa;
+}
+.card-icons {
+  width: 2em;
+}
+.touchid-card-icon {
+  width: 2.5em;
+  margin-top: -2%;
+}
+.section-spacing {
+  padding: 8% 0;
+}
+
+/*====== Section 5 =============*/
+#section-5 {
+  padding-bottom: 5%;
+}
+#pricing-card{
+  margin: 10% 0 20% 0;
+}
+#price {
+  font-size: 4rem;
 }
 /*==============================
            Footer
