--- a/css/master.css
+++ b/css/master.css
@@ -33,6 +33,9 @@ img {
 blockquote {
   border-left: 5px solid #ff6d00;
 }
+
+/*==============================*/
+
 .remove-margin {
   margin: 0 !important;
 }
@@ -82,8 +85,11 @@ i.icon-gray {
     position: relative;
     padding: 0;
 }
-.section-title {
+.section-title-container {
   margin: 10% 0 5% 0;
+}
+.section-title {
+  font-size: 1.25rem;
 }
 .section-title-underline {
   height: 0.15em;
@@ -160,24 +166,29 @@ i.icon-gray {
 }
 /*====== Section 4 =============*/
 
-#section-4 {
-  background-color: #fafafa;
-}
 .card-icons {
   width: 2em;
   margin:0 0 20% -4%;
 }
 .touchid-card-icon {
   width: 2.5em;
-  margin: -2% 0 20% -7%;
+  margin: -2% 0 18.5% -7%;
 }
 .section-spacing {
   padding: 8% 0;
 }
 
 /*====== Section 5 =============*/
+
 #section-5 {
+  padding: 10% 0;
+}
+
+/*====== Section 6 =============*/
+#section-6 {
   padding-bottom: 5%;
+  background-color: #fafafa;
+
 }
 #pricing-card{
   margin: 10% 0 20% 0;
